# Territories

./: .gitignore  GLOBVAR.py  README.md  README.md.backup  delauny.py  gui.py  helper.py  line_profiler.py  math_functions.py  pyproject.toml  tests.py
Data/: nation_names.txt
dev/profiler/: profiler.py
src/gui/: gui.py  helper.py
src/math_functions/: math_functions.py  precalc.py
src/profiler/: profiler.py
src/territories/: territories.py
src/territories/class/: territory.py
src/territories/nation/: nation.py
src/territories/territory/: territory.py
src/tests/: tests.py
src/vars/: GLOBVAR.py  logging_settings.py
tests/: tests.py
