[tool.poetry]
name = "territories"
version = "0.1.0"
description = ""
authors = ["Dmitry Buggenhout <dmitry.buggenhout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
tk = "^0.1.0"

[tool.poetry.scripts]
delauny = "gui.gui:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
