[tool.poetry]
name = "territories"
version = "0.1.0"
description = ""
authors = ["Dmitry Buggenhout <dmitry.buggenhout@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "gui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
tk = "^0.1.0"

[tool.poetry.scripts]
delauny = "gui.gui:main"
tests = "tests.tests:main"
territories = "territories.territories:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
